# onnx-demo-rust

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
onnx_demo_rust/: config.py  data_loader.py  inf.py  main.py  preprocessing.py  train.py
